Add post handler and wire button to trigger it

--- a/site/index.html
+++ b/site/index.html
@@ -5,12 +5,12 @@
         <link href="index.css" rel="stylesheet" />
     </head>
     <body>
-        <p>
-        before h1
-        </p>
-        <h1 class="default" id="paragraph" >
-            HELLO WORLD
+        <h1>
+        Garaza
         </h1>
+        <button class="default" id="button">
+            Press me
+        </button>
         <p>
         after h1
         </p>
